--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,8 @@ body {
 }
 
 .box {
-  display: flex;
+  display: grid;
+  grid-template-columns: 2fr;
   border: 1px solid gray;
 }
 
@@ -112,7 +113,7 @@ body {
   margin: auto;
 }
 .box2 {
-  display: block;
+  display: grid;
   border: 1px solid gray;
 }
 .box2__cuerpo-img {
@@ -125,6 +126,8 @@ body {
 }
 
 .svg4 {
+  display: grid;
+  grid-template-columns: 1fr;
   width: 100%;
   margin: auto;
 }
