--- a/assets/scss/layout/_hero.scss
+++ b/assets/scss/layout/_hero.scss
@@ -11,7 +11,8 @@ section {
 }
 
 .box {
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr;
     border: 1px solid gray;
 }
 .box-aside {
@@ -53,7 +54,7 @@ section {
 }
 /////////////////////////////////////////////////////////////////////////
 .box2 {
-    display: block;
+    display: grid;
     border: 1px solid gray;
   &__cuerpo-img {
     width: 100%;
@@ -100,6 +101,8 @@ section {
  
 }
 .svg4 {
+  display: grid;
+  grid-template-columns: 1fr;
   width: 100%;
   margin: auto;
 }
