--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -13,20 +13,29 @@
     }
   }
 }
-.btn {
-}
 .footer {
-    margin: 0px;
-    width: 100%;
+  margin: 0px;
+  width: 100%;
     background-color: black;
     color: white;
-  &__nav {
+    &__nav {
     font-family: sans-serif;
     font-size: $large;
+  }
+  &__nav a {
+    color: white;
   }
   &__text {
       font-family: sans-serif;
   }
 }
 .form {
+  margin: auto;
+  text-align: center;  
+  width: 50%;
+}
+.btn {
+  width: 50%;
+  margin: auto;
+  border: none;
 }
