--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,10 @@ table {
   color: #fff;
   height: 100px;
 }
+.navbar__items {
+  display: flex;
+  text-align: center;
+}
 .navbar__items ul {
   display: flex;
   width: 100%;
@@ -93,11 +97,13 @@ body {
 
 .main {
   border: 1px solid black;
+  display: flex;
 }
 
 .box {
-  display: grid;
-  grid-template-columns: 2fr;
+  display: contents;
+  width: 100%;
+  /*  grid-template-columns: 2fr; */
   border: 1px solid gray;
 }
 
@@ -127,7 +133,7 @@ body {
 }
 
 .box2 {
-  display: grid;
+  width: 100;
   border: 1px solid gray;
 }
 .box2__cuerpo-img {
@@ -146,9 +152,9 @@ body {
 }
 
 .svg4 {
-  display: grid;
-  grid-template-columns: 1fr;
-  width: 50%;
+  display: flex;
+  /* grid-template-columns: 1fr; */
+  width: 100%;
   margin: auto;
 }
 
